--- a/style.css
+++ b/style.css
@@ -93,3 +93,35 @@
     font-weight: 500;
     text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
   }
+
+  .additional{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin: 5vh;
+    padding: 3vh;
+  }
+  .additional .humidity{
+    color: #FFF;
+    margin: 2vh;
+    padding: 2vh;
+    font-size: 24px;
+    font-weight: 500;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+  }
+  .additional .windspeed{
+    color: #FFF;
+    margin: 2vh;
+    padding: 2vh;
+    font-size: 24px;
+    font-weight: 500;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+  }
+  .additional .sunlight{
+    color: #FFF;
+    margin: 2vh;
+    padding: 2vh;
+    font-size: 24px;
+    font-weight: 500;
+    text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+  }
