--- a/style.css
+++ b/style.css
@@ -97,31 +97,50 @@
   .additional{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    margin: 5vh;
+    flex-wrap:nowrap;
+    margin: 2vh;
     padding: 3vh;
   }
   .additional .humidity{
     color: #FFF;
-    margin: 2vh;
-    padding: 2vh;
+    margin: -4vh;
+    padding: 1vw;
+    margin-left: 2vw;
     font-size: 24px;
     font-weight: 500;
     text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
   }
   .additional .windspeed{
     color: #FFF;
-    margin: 2vh;
-    padding: 2vh;
+    margin: -4vh;
+    padding: 1vw;
+    margin-left: 2vw;
     font-size: 24px;
     font-weight: 500;
     text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
   }
   .additional .sunlight{
     color: #FFF;
-    margin: 2vh;
-    padding: 2vh;
+    margin: -4vh;
+    margin-left: 2vw;
+    padding: 1vw;
     font-size: 24px;
     font-weight: 500;
     text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
   }
+
+.details{
+    text-align: justify;
+    /* width: 100%; */
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 500;
+    /* text-shadow: 0px 4px rgba(0, 0, 0, 0.4); */
+    padding: 1vw;
+    padding-left: 5px;
+    border: solid 2px #FFF;
+    /* background: #FFF; */
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border: solid 0.5px #FFF;
+}
